package Model.Pieces.Immovable;

import Model.Pieces.ImmovablePiece;

public class Trespassing extends ImmovablePiece {
    public Trespassing() {
        super("Trespassing", "T", "./src/Model/images/trespassing.png");
        this.setImageUrlHide("./src/Model/images/trespassing.png");
    }
}
